[package]
name = "meshtext"
version = "0.3.2"
edition = "2021"
exclude = [
    "assets/*",
    "benches/*",
    "cspell.config.yaml",
    "logo.png",
]
description = "Generate vertex-vertex meshes from text."
readme = "README.md"
repository = "https://github.com/FrankenApps/meshtext"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "gamedev", "delaunay", "render", "triangulation"]
categories = ["graphics", "game-development", "rendering"]

[dependencies]
ghx_constrained_delaunay = "0.2.0"
glam = "0.30"
owned_ttf_parser = { version = "0.25", optional = true }
ttf-parser = "0.25"

[features]
default = []
owned = ["dep:owned_ttf_parser"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
gltf-json = "1"
gltf = "1"
plotters = "0.3"
pollster = "0.4"
wgpu = "27"
winit = "0.30"

[[bench]]
name = "bench_main"
path = "benches/bench_main.rs"
harness = false
